# solardata-1

./: Cargo.toml  README.md  package.json  redacted.js  seattle.csv  seattle.json  tucson.csv
data/: tucson.json
scripts/: conv_pdf_png.sh  redacted.sh
src/: main.rs
